# exclaw

./: .gitattributes  .gitignore  OPEN_SOURCE_SOFTWARE_NOTICE.md  README.md  README_CN.md  pyproject.toml  social_station_state.json
docker/: Dockerfile.claw
docs/en/: ACP_Client_Config.md  Agent.md  Browser.md  CLI.md  Channels.md  Configuration.md  ContextCompression.md  Discord.md  E2A-protocol.md  Heartbeat.md  Memory.md  PackExeGuide.md  Quickstart.md  README.md  SUMMARY.md  ScheduledTasks.md  SkillSelfEvolution.md  Skills.md  TaskPlanning.md  WhatsApp.md  WindowsAutoUpdateDesign.md
docs/en/development-practices/: JiuwenClaw-Code-Review-Assistant.md  README.md  (+1 more)
docs/zh/: ACP插件使用.md  Discord.md  E2A-protocol.md  Quickstart.md  README.md  SLASH_COMMAND_ARCHITECTURE.md  SUMMARY.md  Skill自演进.md  Slash命令表.md  whatsapp.md  windows自动更新设计.md  上下文压缩卸载.md  任务规划.md  命令行指令.md  定时任务.md  工具权限与安全防护.md  心跳.md  打包exe指南.md  技能.md  智能体.md  配置信息.md  频道.md
jiuwenbox/: README.md  README_CN.md  pyproject.toml
jiuwenbox/configs/: default-policy.yaml  jiuwenclaw-tool-policy.yaml
jiuwenbox/docker/: Dockerfile  build_docker.sh  run_docker.sh
jiuwenbox/scripts/: server.sh  test.sh
jiuwenbox/tests/: conftest.py
jiuwenclaw/: app.py  app_agentserver.py  app_cli.py  app_gateway.py  app_web.py  app_web_handlers.py  config.py  desktop_app.py  init_workspace.py  jiuwen_core_patch.py  updater.py  utils.py
jiuwenclaw/agentserver/: __init__.py  agent_adapters.py  agent_manager.py  agent_ws_server.py  diff_service.py  interface.py  session_history.py  session_manager.py  session_metadata.py  session_rename.py  skill_manager.py  stream_utils.py
jiuwenclaw/channel/: __init__.py  acp_channel.py  base.py  cli_channel.py  dingding.py  discord_channel.py  feishu.py  feishu_file_service.py  telegram_channel.py  web_channel.py  wechat_channel.py  wecom_channel.py  whatsapp_channel.py  xiaoyi_channel.py
jiuwenclaw/cli/: package-lock.json  package.json
jiuwenclaw/e2a/: __init__.py  adapters.py  agent_compat.py  gateway_normalize.py  models.py  wire_codec.py
jiuwenclaw/evolution/: evolver.py  service.py  store.py
jiuwenclaw/extensions/: loader.py  manager.py  registry.py
jiuwenclaw/gateway/: __init__.py  agent_client.py  channel_manager.py  heartbeat.py  message_handler.py  route_binding.py  session_map.py  slash_command.py
jiuwenclaw/resources/: .env.template  config.yaml
jiuwenclaw/schema/: __init__.py  agent.py  hook_event.py  message.py
jiuwenclaw/web/: package-lock.json  package.json  vite.config.ts
scripts/: build.ps1  build.sh  build_python_packages.py  build_tui.py
tests/integration/: test_acp_cli_stdio_integration.py
tests/system_tests/: conftest.py  test_acp_cli_stdio.py  test_cli_channel_ws.py  test_init_workspace.py  test_system_prompt_live_capture.py  test_team_continuous_dialog.py
tests/ui_e2e/: SKILL.md  cron_ui_report.py  todo_ui_report.py
tests/unit_tests/: test_app_cli.py  test_config.py  test_session_metadata.py  test_utils.py
(+270 files in other folders)
